# flowdesk

./: .dockerignore  .env.example  .gitignore  DEMO.md  DEPLOYMENT.md  DEPLOYMENT_FASTAPI.md  DEPLOYMENT_RAILWAY.md  Dockerfile.backend  Dockerfile.frontend  OVERVIEW.md  SPEC_READINESS.md  TESTING.md  Updates.md  demo-stop.sh  demo.sh  docker-compose.yml  next.config.ts  package-lock.json  package.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml  railway.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_manager_hierarchy.py  0003_departments.py  0004_brand_journey.py  0005_core_departments.py  0006_logo_workflow_files.py  0007_updates_md_gaps.py  0008_assigned_by_updates_closed.py  0009_brand_assigned_managers.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  logging.py  rate_limit.py  roles.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  announcement.py  attachment.py  attendance.py  brand.py  daily_summary.py  department.py  leave.py  notification.py  profile.py  sop.py  task.py
backend/app/schemas/: __init__.py  announcement.py  attendance.py  auth.py  billing.py  brand.py  dashboard.py  department.py  leave.py  (+4 more)
backend/tests/: conftest.py  test_announcements.py  test_attendance.py  test_auth.py  test_billing.py  test_brands.py  test_calendar.py  test_dashboard_performance.py  test_demo_login.py  test_departments.py  test_leaves.py  test_misc.py  test_tasks.py  test_team_users.py
(+158 files in other folders)
