[project]
name = "scrumfolks-tms"
version = "1.0.0"
description = "Scrumfolks Task Management System — FastAPI backend"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Scrumfolks Engineering" }]
license = { text = "Proprietary" }

dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.30,<0.31",
  "gunicorn>=22.0",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0.31,<2.1",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "asyncpg>=0.29",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt==4.0.1",
  "python-jose[cryptography]>=3.3",
  "python-multipart>=0.0.9",
  "email-validator>=2.2",
  "httpx>=0.27",
  "anyio>=4.4",
  "apscheduler>=3.10",
  "jinja2>=3.1",
  "tenacity>=8.5",
  "structlog>=24.1",
  "python-dotenv>=1.0",
  "orjson>=3.10",
  "slowapi>=0.1.9",
  "redis>=5.0",
  "itsdangerous>=2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-passlib",
  "types-python-jose",
  "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "C4", "SIM", "RUF"]
ignore = ["S101", "B008", "N818"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
